[package]
name = "double-ratchet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5.2", features = ["alloc"] }
generic-array = "0.14"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }

[dev-dependencies]
chacha20poly1305 = "0.10.1"
hkdf = "0.12.3"
hmac = "0.12.1"
rand = "0.8.5"
sha2 = "0.10.8"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
